# plantwatering-mcu-poc

./: .gitignore  .vimrc  CMakeLists.txt  CMakeLists.txt.in  README.md  valve_driver.h
.github/workflows/: main.yml
plantwatering/: plantwatering.ino
sources/: CMakeLists.txt  valve.c  valve.h  valve_console.c  valve_console.h  valve_driver.h
tests/: CMakeLists.txt  valve_mock.cc  valve_mock.h  valve_test.cc
